<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">社商商户</string>
    <string name="phone_num">客服电话:4008001101</string>
    <string name="app_version">社商v1.0</string>
    <string name="about_mila">关于社商</string>
    <string name="plz_input_pic">请添加图片</string>
    <string name="current_orders">当前订单</string>
    <string name="histroy_orders">历史订单</string>
    <string name="confirm_order">开始备货</string>
    <string name="cancel_order">撤销订单</string>
    <string name="feedback">意见反馈</string>
    <string name="good_details">商品详情</string>
    <string name="order_details">订单详情</string>
    <string name="goods_list">商品列表</string>
    <string name="num">1234567890</string>
    <string name="settings">设置</string>
    <string name="save">保存</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="add">添加</string>
    <string name="new_add">新增</string>
    <string name="camera">camera</string>
    <string name="mila_shanghu">社商商户</string>
    <string name="orders_list">订单列表</string>
    <string name="xiao_title">消息</string>
    <string name="notify_list">通知列表</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="mila_shenghuo">社商生活·商户专用</string>
    <string name="which_image">1/6</string>
    <string name="main_home">首页</string>
    <string name="tab_msg">消息</string>
    <string name="tab_setting">设置</string>
    <string name="tab_order">订单</string>
    <string name="tab_good">商品</string>
    <string name="good_down_list">已下架</string>
    <string name="good_up_list">已上架</string>
    <string name="save_success">保存成功!</string>
    <string name="save_failed">保存失败!</string>
    <string name="dele_success">删除成功!</string>
    <string name="input_error">输入有误，请重新输入</string>
    <string name="updating_data">正在上传数据</string>
    <string name="sd_not_exit">内存卡不存在</string>
    <string name="select_pic_error">选择图片文件出错</string>
    <string name="select_pic_not_correct">选择图片文件不正确</string>
    <string name="file_not_exit">文件不存在</string>
    <string name="login_failed">登录失败!</string>
    <string name="login">登录</string>
    <string name="sorry_network_disconnected">非常抱歉，您尚未链接网络!</string>
    <string name="mila_msg">mila message</string>
    <string name="mila_message">社商消息</string>
    <string name="mila_reply">请输入</string>
    <string name="mila_send">发送</string>
    <string name="fast_login">快速登录</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refreshing">正在刷新</string>
    <string name="app_list_header_refresh_up">松开刷新</string>
    <string name="app_list_header_refresh_last_update">上次更新于:%s</string>
    <string name="app_list_footer_more">更多</string>
    <string name="app_list_footer_loading">正在加载</string>
    <string name="no_msg_any_more">没有历史消息了</string>
    <string name="no_new_msg_any_more">没有新消息了</string>

    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="descr_image">Image</string>
    <string name="ac_name_image_pager">Image Pager Example</string>

</resources>