<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.6"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_title" />
    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:background="@drawable/denglu_bg"
        android:drawableLeft="@drawable/user_tu"
        android:drawablePadding="15dp"
        android:hint="@string/user_name"
        android:padding="15dip" />

    <EditText
        android:id="@+id/password"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/denglu_bg"
        android:drawableLeft="@drawable/mima_tu"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="268dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/loginbtn_bg"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:onClick="login_onClick"
            android:text="@string/fast_login"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center|bottom" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/mila_shenghuo"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>