<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/tabs_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_button1"
                    style="@style/tab_bottom"
                    android:drawableTop="@drawable/icon_1"
                    android:text="@string/tab_order" />

                <RadioButton
                    android:id="@+id/radio_button2"
                    style="@style/tab_bottom"
                    android:drawableTop="@drawable/icon_2"
                    android:text="@string/tab_good" />

                <RadioButton
                    android:id="@+id/radio_button3"
                    style="@style/tab_bottom"
                    android:drawableTop="@drawable/icon_3"
                    android:text="@string/tab_msg" />

                <RadioButton
                    android:id="@+id/radio_button4"
                    style="@style/tab_bottom"
                    android:drawableTop="@drawable/icon_4"
                    android:text="@string/tab_setting" />
            </RadioGroup>

            <TextView
                android:id="@+id/badge_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:minHeight="30dp" />
        </FrameLayout>
    </LinearLayout>
</TabHost>