<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title_height"
        android:background="@drawable/item_bg" >

        <TextView
            style="@style/title_font"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/orders_list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >
        <TextView
            android:id="@+id/current_orders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/select_bg_1_nor"
            android:gravity="center"
            android:text="@string/current_orders"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/history_orders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/select_bg_1_pre"
            android:gravity="center"
            android:text="@string/histroy_orders"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
	</android.support.v4.view.ViewPager>
</LinearLayout>