<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f4f3ef"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title_height"
        android:background="@drawable/item_bg" >

        <LinearLayout
            android:layout_width="@dimen/layout_title_margin"
            android:layout_height="@dimen/layout_title_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/layout_title_back_margin_left"
                android:background="@drawable/back_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="back_onClick"
                android:text="@string/back"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            style="@style/title_font"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/layout_title_margin"
            android:text="@string/mila_message" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_layout"
        android:layout_below="@+id/title"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:fadingEdge="none" />

    <RelativeLayout
        android:id="@+id/input_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/input_bar_bg"
        android:paddingBottom="2dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="2dp" >

        <TextView
            android:id="@+id/send_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back_bg"
            android:clickable="true"
            android:gravity="center"
            android:onClick="send_onClick"
            android:text="@string/mila_send"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/body_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@+id/send_btn"
            android:ems="10"
            android:hint="@string/mila_reply"
            android:maxHeight="80dp" >
        </EditText>
    </RelativeLayout>

</RelativeLayout>